# saliency-alignment

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
configs/: config.yaml  dataloader.yaml  saliency_eval.yaml  trainer.yaml
configs/data/: coco.yaml  coconut.yaml  grand.yaml  pile.yaml  png.yaml
configs/loss/: alignment.yaml  default.yaml  kl.yaml
configs/model/: llava-1.5-7b.yaml  llava-1.6-mistral-7b-hf.yaml  llava-v1.6-mistral-7b-hf.yaml  mamba2.8.yaml
configs/optim/: adamw.yaml
configs/scheduler/: cosine.yaml
finetune/: __main__.py  data.py  finetune.py  lightning.py  metrics.py  model.py  saliency.py  saliency_eval.py  strategy.py  tokenization.py  transformer_utils.py
finetune/cli/: download.py  save_data.py
finetune/criterion/: __init__.py  alignment.py  base.py  kl.py  utils.py  zero.py
finetune/data/: collators.py  datasets.py  download.py  tokenization.py  utils.py
finetune/data/coconut/: __init__.py  collator.py  dataset.py  download.py  tokenization.py
finetune/data/grand/: collator.py  dataset.py  download.py
finetune/data/png/: collator.py  dataset.py  tokenization.py
finetune/eval/: __init__.py  metrics.py  runner.py
scripts/: data.sh  data_cscs.sh  env.sh  run.sh  run_cscs.sh
scripts/cscs/: arr.sh  arr_eval.sh  arr_saliency_eval.sh  arr_train.sh  build_eval_image.sbatch  build_image.sbatch  data.sh  env.sh  run.sh  single.sh
scripts/cscs/count/: arr.sh  env.sh  eval.sh
scripts/euler/: data.sh  env.sh  run.sh
scripts/python/: compare_drift.py  prompts.csv  viz.py
scripts/viz/: viz.py
slurm/: Dockerfile  Dockerfile.eval  README.md  saliency.toml  saliency_eval.toml
