[project]
name = "finetune"
version = "0.1.0"
description = "Fine-tuning language models with Lightning and Hydra"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "hydra-core>=1.3.2",
    "lightning>=2.5.6",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.4",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # basics: style, flakes, isort, pyupgrade, bugbear
ignore = ["E501"]                    # let the formatter handle wrapping

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.mypy]
python_version = "3.11"
files = ["finetune"]
exclude = ["\\.venv", "env", "build", "dist"]
follow_imports = "skip"  # don't analyze third-party libs
ignore_missing_imports = true
